--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-microbenchmarks/unikraft/scripts/*
+benchmark_cli/unikraft-nginx
+benchmark_cli/unikraft-redis
+benchmark_cli/unikraft-sqlite
+benchmark_cli/venv
+benchmark_cli/fio
+**/benchmark_cli/deactivate
+**/benchmark_cli/scripts
+microbenchmarks
 **/__pycache__/
